--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,5 +1,8 @@
-:root {}
-
+:root {
+  --text-primary: white;
+  --bg-primary: #2c2c2c;
+}
+  
 body {
   box-sizing: border-box;
 
@@ -10,4 +13,8 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+}
+
+body {
+  background-color: var(--bg-primary);
 }
