feat: add initial html structure and header

--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -1,12 +1,18 @@
 .header {
     display: flex;
     flex-direction: column;
-    color: var(--text-primary);
+    grid-area: header;
+    gap: 24px;
+
+    img {
+        border-radius: 24px;
+    }
 
     h1 {
         font-weight: 600;
         font-size: 28px;
         line-height: 42px;
+        color: var(--text-primary);
     }
     
     h2 {
@@ -14,10 +20,12 @@
         font-weight: 400;
         font-size: 20px;
         line-height: 30px;
+        color: var(--text-secondary);
     }
 
     @media (min-width: 768px) {
         flex-direction: row-reverse;
+        align-items: center;
         
         h1 {
             font-size: 36px;
@@ -29,5 +37,11 @@
             line-height: 45px;
             font-style: normal;
         }
+
+        img {
+            border-radius: 100%;
+            border: 2px solid white;
+        }
+
     }
 }
