--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -14,7 +14,7 @@
         line-height: 42px;
         color: var(--text-primary);
     }
-    
+
     h2 {
         font-style: italic;
         font-weight: 400;
@@ -26,7 +26,7 @@
     @media (min-width: 768px) {
         flex-direction: row-reverse;
         align-items: center;
-        
+
         h1 {
             font-size: 36px;
             line-height: 54px;
@@ -38,10 +38,12 @@
             font-style: normal;
         }
 
+
         img {
             border-radius: 100%;
             border: 2px solid white;
+            height: 200px;
+            width: 200px;
         }
-
     }
 }
