--- a/src/app/styles/home.scss
+++ b/src/app/styles/home.scss
@@ -1,15 +1,48 @@
 .container {
     padding: 40px 32px;
     display: grid;
+    gap: 24px;
+    justify-items: center;
     grid-template-rows: repeat(4, auto);
-    grid-template-areas:
-        "header"
-        "buttons"
-        "experience"
-        "info";
+    grid-template-areas: 
+    "header"
+    "btns"
+    "experience"
+    "info";
+
+    .buttons {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        gap: 24px;
+        grid-area: btns;
+        width: 100%;
+
+        .btn-primary {
+            background: linear-gradient(90deg, #181fe7 2.62%, #c1c1c1 93.38%);
+            border-radius: 24px;
+            width: 325px;
+            padding: 12px;
+            text-align: center;
+            text-decoration: none;
+    
+            color: var(--text-primary);
+            font-weight: 500;
+            font-size: 20px;
+            line-height: 30px;
+            text-transform: uppercase;
+            border: none;
+            
+            display: flex;
+            align-items: center;
+            gap: 20px;
+            justify-content: center;
+        }
+    }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 768px){
     .container {
         padding: 70px 60px;
         height: 100vh;
@@ -18,9 +51,8 @@
         align-items: center;
         justify-items: start;
         justify-content: space-between;
-        grid-template-areas:
-            "header info"
-            "experience empty1"
-            "empty2 buttons";
+        grid-template-areas: 
+        "header info"
+        "experience btns";
     }
 }
